# cppConomy

./: .gitignore  ARCHITECTURE_PLAN.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  FEATURES_GUIDE.md  IMPLEMENTATION_ROADMAP.md  PROPAGATION_CODE_EXAMPLES.md  PROPERTY_ASSIGNMENT.md  QUICK_REFERENCE_PATTERNS.md  README.md  README_REDESIGN.md  STRUCTURE.md  VISUAL_PROPAGATION_GUIDE.md  capital.h  cli.h  cli0.h  cmd.h  command_plan.md  consumer.h  executor.h  farmer.h  features.md  firm.h  laborer.h  list.md  main.cpp  market.h  notes.md  plan.md  plan_v2.md  product.h  style.h  test_propagation.txt  tutorial.md  world.h
src/: CLI.cpp  CLI.h  CommandExecutor.cpp  CommandExecutor.h  CommandParser.cpp  CommandParser.h  Config.h  Consumer.cpp  Consumer.h  EconomicEquations.cpp  EconomicEquations.h  EconomicPropagation.cpp  EconomicPropagation.h  Farmer.cpp  Farmer.h  Government.cpp  Government.h  Logger.h  Market.cpp  Market.h  Owner.cpp  Owner.h  Person.cpp  Person.h  Product.h  Simulation.cpp  Simulation.h  TermColors.h  VariableTracker.cpp  VariableTracker.h  Worker.cpp  Worker.h  main.cpp
src/commands/: CommandExecutor.cpp  CommandExecutor.h  CommandParser.cpp  CommandParser.h
src/core/: Agent.h  Economy.cpp  Economy.h  Firm.cpp  Firm.h  Government.cpp  Government.h  Market.cpp  Market.h  Person.cpp  Person.h  Simulation.cpp  Simulation.h  Worker.cpp
src/gui/: CommandPanel.cpp  CommandPanel.h  CommandsPanel.cpp  CommandsPanel.h  DashboardPanel.cpp  DashboardPanel.h  EventLogPanel.cpp  EventLogPanel.h  HistoryPanel.cpp  HistoryPanel.h  MainFrame.cpp  MainFrame.h  SelectionPanel.cpp  SelectionPanel.h
src/models/: OkunLaw.h  PhillipsCurve.h  QuantityTheory.h  StochasticShock.h  UtilityFunction.h
src/utils/: Config.h  Logger.h  Statistics.h  WinFix.h
